Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/Platform_Event_Error_Log__c.object-meta.xml
<CustomObject>
    <label>Platform Event Error Log</label>
    <nameField>
        <displayFormat>PEEL-{0000000}</displayFormat>
        <label>Error</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Platform Event Error Log</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>