Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <description>What was the Action when this error occurred.</description>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Publish</fullName>
            </value>
            <value>
                <fullName>Consume</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>