Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Class_And_Method__c.field-meta.xml
<CustomField>
    <fullName>Class_And_Method__c</fullName>
    <description>Class and method that is writing the Error.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Class and method that is writing the Error.</inlineHelpText>
    <label>Class And Method</label>
    <length>120</length>
    <type>Text</type>
</CustomField>