Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Closed_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Closed Date</label>
    <type>DateTime</type>
</CustomField>