Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Error_Handling_Status__c.field-meta.xml
<CustomField>
    <fullName>Error_Handling_Status__c</fullName>
    <label>Error Handling Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Opened</fullName>
            </value>
            <value>
                <fullName>Investigating</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Ignored</fullName>
            </value>
            <value>
                <fullName>Assigned to Source System</fullName>
            </value>
            <value>
                <fullName>Fixing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>