Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Error_Handling_User__c.field-meta.xml
<CustomField>
    <fullName>Error_Handling_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who is looking into the Error.</description>
    <inlineHelpText>User who is looking into the Error.</inlineHelpText>
    <label>Error Handling User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Platform_Event_Error_Log</relationshipName>
    <type>Lookup</type>
</CustomField>