Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Error_Message__c.field-meta.xml
<CustomField>
    <fullName>Error_Message__c</fullName>
    <description>Short error message. Typically from the program making this entry.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Error message from the program that caught the exception.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>