Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <description>The name of the event that was being processed when this error occurred.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Name of the Event when this error happened.</inlineHelpText>
    <label>Object</label>
    <length>40</length>
    <type>Text</type>
</CustomField>