Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Event_String__c.field-meta.xml
<CustomField>
    <fullName>Event_String__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Event String</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>