Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/EventSource__c.field-meta.xml
<CustomField>
    <fullName>EventSource__c</fullName>
    <description>Source of the Event. In Publish scenario, it is SELF.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>SELF or some external system that created the source event.</inlineHelpText>
    <label>EventSource</label>
    <length>40</length>
    <type>Text</type>
</CustomField>