Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Exception_Error__c.field-meta.xml
<CustomField>
    <fullName>Exception_Error__c</fullName>
    <description>Full exception error message.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Full exception error message.</inlineHelpText>
    <label>Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>