Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/ExternalID__c.field-meta.xml
<CustomField>
    <fullName>ExternalID__c</fullName>
    <description>The ID in the System that Published the Event. Would be null in Publish Action.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Nulll if Publishing or ID in the consuming event.</inlineHelpText>
    <label>ExternalID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>