Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/fields/Severity__c.field-meta.xml
<CustomField>
    <fullName>Severity__c</fullName>
    <description>Error severity.</description>
    <label>Severity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fatal Error - Bailing out</fullName>
            </value>
            <value>
                <fullName>Recoverable Error - Published/Consumed</fullName>
            </value>
            <value>
                <fullName>Error Ignored</fullName>
            </value>
            <value>
                <fullName>Informational</fullName>
            </value>
            <value>
                <fullName>Success Log</fullName>
            </value>
            <value>
                <fullName>Error-In</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>