Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/listViews/All_Order_Platform_Events.listView-meta.xml
<ListView>
    <fullName>All_Order_Platform_Events</fullName>
    <columns>NAME</columns>
    <columns>EventSource__c</columns>
    <columns>Action__c</columns>
    <columns>Exception_Error__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event__c</field>
        <operation>startsWith</operation>
        <value>order,Order</value>
    </filters>
    <label>All Order Platform Events</label>
    <language>en_US</language>
</ListView>