Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/listViews/All_Platform_Events_Log.listView-meta.xml
<ListView>
    <fullName>All_Platform_Events_Log</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Event__c</columns>
    <columns>Action__c</columns>
    <columns>EventSource__c</columns>
    <columns>Exception_Error__c</columns>
    <columns>Error_Message__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Platform Events Log</label>
</ListView>