Prod-EU/force-app/main/default/objects/Platform_Event_Error_Log__c/listViews/Error_Platform_Events_Log.listView-meta.xml
<ListView>
    <fullName>Error_Platform_Events_Log</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Event__c</columns>
    <columns>Action__c</columns>
    <columns>EventSource__c</columns>
    <columns>Class_And_Method__c</columns>
    <columns>Exception_Error__c</columns>
    <columns>Error_Message__c</columns>
    <columns>ExternalID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Severity__c</field>
        <operation>notEqual</operation>
        <value>Success Log</value>
    </filters>
    <label>Error Platform Events Log</label>
</ListView>